; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_win.c_register_style_check_class.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_win.c_register_style_check_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32*, i32, i32, i32*, i32, i32, i32, i32, i32 }

@StyleCheckProc = common dso_local global i32 0, align 4
@IDC_ARROW = common dso_local global i32 0, align 4
@COLOR_BTNFACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"WineStyleCheck\00", align 1
@atomStyleCheckClass = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @register_style_check_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_style_check_class() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i8* null, i8** %2, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %4 = load i32, i32* @StyleCheckProc, align 4
  %5 = sext i32 %4 to i64
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 0, i32* %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32 0, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  %10 = call i32 @GetModuleHandleA(i32* null)
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %9, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  store i32 0, i32* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 6
  %15 = load i32, i32* @IDC_ARROW, align 4
  %16 = call i32 @LoadCursorA(i32 0, i32 %15)
  store i32 %16, i32* %14, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 7
  %18 = load i32, i32* @COLOR_BTNFACE, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 8
  store i32 0, i32* %20, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 9
  store i32 ptrtoint ([15 x i8]* @.str to i32), i32* %21, align 8
  %22 = call i32 @RegisterClassA(%struct.TYPE_3__* %1)
  store i32 %22, i32* @atomStyleCheckClass, align 4
  %23 = load i32, i32* @atomStyleCheckClass, align 4
  %24 = call i32 @assert(i32 %23)
  ret void
}

declare dso_local i32 @GetModuleHandleA(i32*) #1

declare dso_local i32 @LoadCursorA(i32, i32) #1

declare dso_local i32 @RegisterClassA(%struct.TYPE_3__*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
